# ndsplines

./: .gitignore  .readthedocs.yaml  1d-demo.py  1d-interp.py  1d-lsq.py  1d-profile.py  2d-demo.py  2d-interp.py  2d-lsq.py  2d-profile.py  LICENSE  MANIFEST.in  NDBPoly.py  NDBSpline.py  NdBPoly.py  azure-pipelines.yml  build_wheel.sh  demo.py  least_squares_demo.py  map_coordinates_prototype.py  ndimaage_ndbpoly.py  ndimage_ndpoly.py  plot_b_spline.py  profiling-notes.txt  pyproject.toml  readme.rst  requirements-dev.txt  scipy_bspl.pyx  setup.py  splev_ndbpoly.py  test_bspline.py
.github/workflows/: build.yml  dist.yml  test.yml  wheels.yml
benchmarks/: 1d-benchmark.py  1d-profile.py  2d-benchmark.py  README.txt
docs/: Makefile  api.rst  background.rst  compare.rst  conf.py  index.rst  math.rst
docs/api/: ndsplines.NDSpline.rst  ndsplines._augknt.rst  ndsplines._bspl.rst  ndsplines._not_a_knot.rst  ndsplines._npy_bspl.rst  ndsplines.from_file.rst  ndsplines.make_interp_spline.rst  ndsplines.make_interp_spline_from_tidy.rst  ndsplines.make_lsq_spline.rst  ndsplines.set_impl.rst
docs/api/NDSPline/: ndsplines.NDSpline.__call__.rst  ndsplines.NDSpline.__eq__.rst  ndsplines.NDSpline.__init__.rst  ndsplines.NDSpline.allocate_workspace_arrays.rst  ndsplines.NDSpline.antiderivative.rst  ndsplines.NDSpline.compute_basis_coefficient_selector.rst  ndsplines.NDSpline.copy.rst  ndsplines.NDSpline.derivative.rst  ndsplines.NDSpline.to_file.rst
examples/: 1d-deriv.py  1d-interp.py  1d-lsq.py  2d-interp.py  2d-lsq.py  FOR_README.py  README.txt  tidy.py
ndsplines/: __init__.py  _bspl.h  _bspl.pyx  _npy_bspl.py  ndsplines.py  scipy_bspl.pyx  version.py
paper/: paper.md  references.bib
tests/: test_calculus.py  test_eval.py  test_make_interp.py  test_make_lsq.py  test_ndsplines.py  utils.py
